=======
CHANGES
=======

3.6.1 (unreleased)
------------------

- Change catalog's addMenuItem permission to zope.ManageServices
  as it doesn't make any sense to add an empty catalog that you
  can't modify with zope.ManageContent permission and it's completely
  useless without indexes. So there's no need to show a menu item.

3.6.0 (2009-01-03)
------------------

- Make TextIndex addform use default values as specified in
  zope.app.catalog.text.ITextIndex interface. Also, change
  "searchableText" to "getSearchableText" there, as it's the
  right value.

- Add Keyword (case-insensitive and case-sensitive) catalog
  indices. It's now possible to use them, because ones in
  zope.index now implement IIndexSearch interface.

- Add support for sorting, reversing and limiting result set
  in the ``searchResults`` method, using new IIndexSort interface
  features of zope.index.

3.5.2 (2008-12-28)
------------------

- Remove testing dependencies from install_requires.

3.5.1 (2007-10-31)
------------------

- Resolve ``ZopeSecurityPolicy`` deprecation warning.


3.5.0 (2007-10-11)
------------------

- Updated some meta-data.

- Move ``ftests.py`` to ``tests.py``.


3.5.0a3 (2007-09-27)
--------------------

- removed some deprecations


3.5.0a2 (2007-09-21)
--------------------

- bugfix: passing the context to getAllUtilitiesRegisteredFor in all
  eventhandlers because no catalog was found which was located in a
  sub site and for example the ObjectModifiesEvent get fired from somewhere
  in the root.


3.5.0a1 (2007-06-26)
--------------------

- Added marker interfaces to prevent automatic indexing (see: ``event.txt``)
