@@ -1,5 +1,5 @@
 [buildout]
-develop = .
+develop = . zope.container zope.app.container
 parts = test
 
 [test]
