@@ -66,9 +66,9 @@ setup(name = 'zope.app.catalog',
           'setuptools',
           'ZODB3',
           'zope.annotation',
-          'zope.app.container',
           'zope.app.intid',
           'zope.component',
+          'zope.container',
           'zope.index>=3.5.0',
           'zope.interface',
           'zope.lifecycleevent',
