@@ -24,8 +24,8 @@ from zope import component
 from zope.interface import implements
 from zope.annotation.interfaces import IAttributeAnnotatable
 
-from zope.app.container.interfaces import IContainer
-from zope.app.container.btree import BTreeContainer
+from zope.container.interfaces import IContainer
+from zope.container.btree import BTreeContainer
 from zope.app.catalog.interfaces import ICatalog, INoAutoIndex, INoAutoReindex
 from zope.app.intid.interfaces import IIntIds
 from zope.traversing.interfaces import IPhysicallyLocatable
