@@ -10,6 +10,9 @@ CHANGES
   can't modify with zope.ManageContent permission and it's completely
   useless without indexes. So there's no need to show a menu item.
 
+- Replaced dependency on `zope.app.container` with a lighter-weight
+  dependency upon the newly refactored `zope.container` package.
+
 3.6.0 (2009-01-03)
 ------------------
 
